[package]
name = "ko-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
regex-lite = "0.1.9"
rust-embed = { version = "8.11.0", features = ["compression", "debug-embed"] }
rustix = { version = "1.1.4", features = ["system"] }

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
